--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ models filter=lfs diff=lfs merge=lfs -text
 static filter=lfs diff=lfs merge=lfs -text
 templates filter=lfs diff=lfs merge=lfs -text
 try.py filter=lfs diff=lfs merge=lfs -text
+code filter=lfs diff=lfs merge=lfs -text
